--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
- <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#prime">AV travel</a>
+ <nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#prime">av travel</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
