--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
  <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#prime">av travel</a>
+  <a class="navbar-brand" [routerLink]="['/']">av travel</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,19 +7,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active mr-3">
-        <a class="nav-link" href="#prime">ACCUEIL<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#accueil">ACCUEIL<span class="sr-only">(current)</span></a>
       </li>
             <li class="nav-item active mr-5">
-        <a class="nav-link" href="#story">DESTINATIONS<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#destination">DESTINATIONS<span class="sr-only">(current)</span></a>
       </li>
             <li class="nav-item active mr-5">
-        <a class="nav-link" href="#beer">TOURS<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#tours">TOURS<span class="sr-only">(current)</span></a>
       </li>
             <li class="nav-item active mr-5">
-        <a class="nav-link" href="#bread">CONTACT<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#contact">CONTACT<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active mr-5">
-        <a class="nav-link" href="#visit">A PROPOS<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#us">A PROPOS<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active mr-5">
         <a class="nav-link" [routerLink]="['/register']">REGISTER<span class="sr-only">(current)</span></a>
