css banner home

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid banner_home">
   <div class="row banner_home_div">
-      <h1 class="banner_home_h1 col-12 text-white">Trouver votre prochaine destination</h1>
-      <h2 class="banner_home_h2 col-12 text-white">Découvrer des lieux incroyables avec des offres exclusives</h2>
+      <h1 class="banner_home_h1 col-12 text-white">Trouver votre prochaine destination.</h1>
+      <h2 class="banner_home_h2 col-12 text-white">Découvrer des lieux incroyables avec des offres exclusives.</h2>
   </div>
 </div>
