--- a/src/app/components/destinations/destinations.component.html
+++ b/src/app/components/destinations/destinations.component.html
@@ -1,1 +1,8 @@
-<p>destinations works!</p>
+<div class="container">
+  <h1>Les destinations populaire !</h1>
+  <div class="row">
+    <div class="col-sm-6 col-md-6 my-1" style="display: flex; justify-content: center;" *ngFor="let destination of destinations">
+      <img [src]="destination.image" alt="" style="height: 10rem;">
+    </div>
+  </div>
+</div>
