--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
 <app-banner></app-banner>
 <app-search-bar></app-search-bar>
-<app-destinations></app-destinations>
+<app-destinations [destinations]="destinations"></app-destinations>
