--- a/src/app/components/destinations/destinations.component.html
+++ b/src/app/components/destinations/destinations.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row mt-5">
     <h1 class="col-12 mt-5 mb-3 destinations_h1">Destinations populaire</h1>
     <div class="col-sm-6 col-md-6 my-1" style="display: flex; justify-content: center;" *ngFor="let destination of destinations | slice:0:4">
       <a href="http://google.com">
