--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <app-banner></app-banner>
 <app-search-bar></app-search-bar>
 <app-destinations [destinations]="destinations"></app-destinations>
+<app-tours [tours]="tours"></app-tours>
