add player component start

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,3 +2,4 @@
 <app-search-bar></app-search-bar>
 <app-destinations [destinations]="destinations"></app-destinations>
 <app-tours [tours]="tours"></app-tours>
+<app-player></app-player>
