modif html destination

--- a/src/app/pages/admin-destinations/admin-destinations.component.html
+++ b/src/app/pages/admin-destinations/admin-destinations.component.html
@@ -4,7 +4,7 @@
       <h2 class="font-weight-light">
         <i class="fas fa-map-marked-alt"></i> Destinations
       </h2>
-      <button class="btn-primary ml-auto" type="button" data-toggle="modal" data-target="#propertiesFormModal" (click)="resetForm()">
+      <button class="btn-primary ml-auto" type="button" data-toggle="modal" data-target="#propertiesFormModal">
         <i class="fas fa-plus"></i> Ajouter une destiation
       </button>
     </div>
