add window.location before rxjs

--- a/src/app/pages/admin-destinations/admin-destinations.component.html
+++ b/src/app/pages/admin-destinations/admin-destinations.component.html
@@ -18,6 +18,7 @@
         </div>
       </div>
       <div class="row">
+        <p class="col-12">{{ destination.ville }}</p>
         <p class="col-12">{{ destination.pays }}</p>
         <p class="col-12">{{ destination.description }}</p>
         <img class="col-6" [src]="destination.image" alt="">
