--- a/src/app/pages/admin-destinations/admin-destinations.component.html
+++ b/src/app/pages/admin-destinations/admin-destinations.component.html
@@ -28,7 +28,7 @@
           <div class="d-flex">
             <div class="ml-auto">
               <button class="btn btn-primary m-1"  type="button" data-toggle="modal" data-target="#destinationsFormModal" (click)="onEditDestination(destination, i)"><i class="fas fa-edit"></i></button>
-              <button class="btn btn-danger m-1" type="button" (click)="onDeleteDestination(destination ,i)"><i class="fas fa-trash-alt"></i></button>
+              <button class="btn btn-danger m-1" type="button" data-toggle="modal" data-target="#deletePropertyModal" onclick = "$('.show').trigger('click')" (click)="onDeleteDestination(destination ,i)"><i class="fas fa-trash-alt"></i></button>
             </div>
           </div>
         </div>
@@ -70,6 +70,23 @@
           <button type="button" class="btn btn-primary" type="submit" onclick = "$('.close').trigger('click')" [disabled]="destinationsForm.invalid">Enregistrer</button>
         </div>
       </form>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="deletePropertyModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Supprimer ce bien ?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-danger" onclick = "$('.close').trigger('click')" (click)="onConfirmDeleteProperty()">Supprimer</button>
+      </div>
     </div>
   </div>
 </div>
